@@ -6,42 +6,21 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Component
 public class EventMapper {
-
-
-    // Maparea din Event în EventDto
     public EventDto eventEntityToDto(Event event) {
-        return EventDto.builder()
-                .name(event.getName())
-                .eventCategory(event.getEventCategory()) // Mapăm numele categoriei din entitatea Category
-                .eventDetails(event.getEventDetails()) // Mapăm EventDetails
-                .build();
+        return new EventDto(
+                event.getName(),
+                event.getEventCategory(),
+                event.getEventDetails()
+        );
     }
 
-    // Maparea din lista de Event în lista de EventDto
     public List<EventDto> eventListEntityToDto(List<Event> events) {
         return events.stream()
                 .map(this::eventEntityToDto)
-                .collect(Collectors.toList());
-    }
-
-    // Maparea din EventDto în Event
-    public Event eventDtoToEntity(EventDto eventDto) {
-
-        return Event.builder()
-                .name(eventDto.name())
-                .eventCategory(eventDto.eventCategory())
-                .eventDetails(eventDto.eventDetails())
-                .build();
-    }
-
-    public List<Event> eventListDtoToEntity(List<EventDto> eventDtos) {
-        return eventDtos.stream()
-                .map(this::eventDtoToEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
